Wyglada na to, ze skonczony. Drobnostki doszlifowane. Dla pretnosci 2400 ciezko go odczytac, trzeba wiele razy probowac i w koncu sie udaje

--- a/Modbus_Programmer/MainWindow.xaml
+++ b/Modbus_Programmer/MainWindow.xaml
@@ -5,7 +5,7 @@
     <Grid>
 		<Label Height="28" Margin="17,19,0,0" Name="label1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="51">Port RS</Label>
 		<ComboBox Height="23" Margin="71,19,0,0" Name="comboBoxPorts" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" />
-		<Button Height="23" Margin="71,65,0,0" Name="button1" VerticalAlignment="Top" Click="button1_Click" HorizontalAlignment="Left" Width="120">Szukaj modułów</Button>
+		<Button Height="23" Margin="71,65,0,0" Name="button_ReadParams" VerticalAlignment="Top" Click="Button_ReadParams_Click" HorizontalAlignment="Left" Width="120">Szukaj modułów</Button>
 		<ComboBox Margin="71,175,0,0" Name="ComboBoxBaud" Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120">
 			<ComboBoxItem>2400</ComboBoxItem>
 			<ComboBoxItem>9600</ComboBoxItem>
@@ -16,7 +16,7 @@
 		<TextBox Height="23" Margin="71,210,0,0" Name="TextBoxAdres" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" />
 		<ProgressBar Height="18" Margin="27,109,0,0" Name="ProgressBarRead" VerticalAlignment="Top" HorizontalAlignment="Left" Width="208" />
 		<ProgressBar Height="18" Margin="29,318,0,0" Name="ProgressBarWrite" VerticalAlignment="Top" HorizontalAlignment="Left" Width="206" />
-		<Button Height="23" Margin="71,277,0,0" Name="button_saveParams" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" Click="Button_SaveParams_Click">Zapis parametrów</Button>
+		<Button Height="23" Margin="71,277,0,0" Name="button_SaveParams" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" Click="Button_SaveParams_Click">Zapis parametrów</Button>
 		<GroupBox Header="Parametry modułu" Margin="29,146,0,0" Name="ModuleGroupBox" HorizontalAlignment="Left" Width="206" Height="109" VerticalAlignment="Top" />
 	</Grid>
 </Window>
