--- a/Modbus_Programmer/MainWindow.xaml
+++ b/Modbus_Programmer/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Modbus_Programmer.Window1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Programator Modułów Modbus RTU" Height="451" Width="284" ResizeMode="NoResize">
+    Title="Programator Modułów Modbus RTU" Height="451" Width="284" ResizeMode="NoResize" Icon="/Modbus_Programmer;component/Connect.ico">
     <Grid>
 		<Label Height="28" Margin="17,19,0,0" Name="label1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="51">Port RS</Label>
 		<ComboBox Height="23" Margin="71,19,0,0" Name="comboBoxPorts" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" />
