--- a/Modbus_Programmer/App.xaml
+++ b/Modbus_Programmer/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Modbus_Programmer.App"
+﻿<Application x:Class="CliConfigurator.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="MainWindow.xaml">
