--- a/Modbus_Programmer/App.xaml
+++ b/Modbus_Programmer/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="CliConfigurator.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml">
+    StartupUri="MainWindow.xaml"
+    Exit="Application_Exit">
+
     <Application.Resources>
          
     </Application.Resources>
